--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,14 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"
         android:layout_marginBottom="-56dp" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation"
-        android:background="?android:attr/windowBackground" />
+        android:background="#FFFFFF"
+        app:menu="@menu/bottom_navigation" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
