--- a/app/src/main/res/layout/fragment_emergency.xml
+++ b/app/src/main/res/layout/fragment_emergency.xml
@@ -12,7 +12,8 @@
         android:layout_height="34dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:text="Emergency services"
+        android:text="List of local Emergency services"
+        android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.761"
@@ -24,7 +25,7 @@
         android:layout_width="178dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="101"
+        android:text="Fire Department: 101"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_marginTop="12dp"
-        android:text="102"
+        android:text="Police: 102"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
@@ -50,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="16dp"
-        android:text="103"
+        android:text="Ambulance: 03"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
@@ -63,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="16dp"
-        android:text="104"
+        android:text="Gas service: 104"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
